--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -11,6 +11,8 @@
   <script src="js/lib/angular/angular-animate.min.js"></script>
 
   <script src="js/app.js"></script>
+  <script src="js/controllers/specsController.js"></script>
+  <script src="js/controllers/helpController.js"></script>
 
 </head>
 <body>
