--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>TGW Customizer</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link rel="stylesheet" href="css/style.css">
 
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
@@ -16,9 +15,9 @@
 
 </head>
 <body>
-	<div class="page" ng-app="tgwClubCustomizer">
-		<nav class="cf" ng-include="'views/nav.html'"></nav>
-		<main class="cf" ng-view></main>
+	<div ng-app="tgwClubCustomizer">
+		<nav ng-include="'views/nav.html'"></nav>
+		<main ng-view></main>
 	</div>
 </body>
 </html>
