--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -7,11 +7,10 @@
 
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
-  <script src="js/lib/angular/angular-animate.min.js"></script>
 
   <script src="js/app.js"></script>
-  <script src="js/controllers/specsController.js"></script>
-  <script src="js/controllers/helpController.js"></script>
+  <script src="js/controllers/controllers.js"></script>
+  <script src="js/services/services.js"></script>
 
 </head>
 <body>
