working on service object set/gets

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -5,6 +5,8 @@
   <title>TGW Customizer</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
 
