--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -12,6 +12,7 @@
 
   <script src="js/app.js"></script>
   <script src="js/controllers/controllers.js"></script>
+  <script src="js/services/mConfigurationOptions.js"></script>
   <script src="js/services/services.js"></script>
 
 </head>
