--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -13,6 +13,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/controllers.js"></script>
   <script src="js/services/mConfigurationOptions.js"></script>
+  <script src="js/services/mConfigurationRelationships.js"></script>
   <script src="js/services/services.js"></script>
 
 </head>
