--- a/builds/development/indexFittingGuide.html
+++ b/builds/development/indexFittingGuide.html
@@ -9,6 +9,8 @@
 
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/jquery.js"></script>
 
   <script src="js/appFittingGuide.js"></script>
   <script src="js/controllers/fittingGuideController.js"></script>
